--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,7 +13,6 @@ nav {
 }
 
 .Navbar img {
-  height: 6rem;
   width: 6rem;
 }
 
@@ -28,7 +27,9 @@ li a {
   text-decoration: none;
   color: var(--primary-color);
   padding: 1.5rem;
-  font-weight: lighter;
+  font-weight: 400;
+  font-style: normal;
+
   font-size: 1.6rem;
   display: inline-block;
 }
