--- a/src/sections/Layoutsection.css
+++ b/src/sections/Layoutsection.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   padding: 5rem;
+  padding-bottom: 0rem;
 }
 
 .layout-section {
@@ -38,7 +39,7 @@
 }
 
 .layout-process {
-  padding: 5rem 0;
+  padding-top: 5rem;
   max-width: 1440px;
   display: flex;
   flex-direction: column;
@@ -61,7 +62,8 @@
 }
 
 .layout-process-flow {
-  padding: 7rem 0;
+  padding: 7rem 0rem;
+  padding-bottom: 0rem;
   display: flex;
   flex-direction: column;
   align-items: center;
