--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,7 +1,7 @@
 .card {
   background-color: var(--secondary-color);
   height: 25.8rem;
-  width: 20%;
+  width: 25%;
   padding: 3rem 2rem;
   border-radius: 2rem;
   display: flex;
@@ -27,4 +27,43 @@
 
 .card p {
   font-size: 1rem;
+}
+
+@media (max-width: 1070px) {
+  .card {
+    width: 40%;
+  }
+}
+
+@media (max-width: 768px) {
+  .card {
+    width: 80%;
+  }
+
+  .card h3 {
+    font-size: 1.5rem;
+  }
+
+  .card p {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+    width: 100%;
+  }
+
+  .icon {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+
+  .card h3 {
+    font-size: 1.3rem;
+  }
+
+  .card p {
+    font-size: 0.95rem;
+  }
 }
