--- a/src/components/Company.css
+++ b/src/components/Company.css
@@ -42,3 +42,26 @@
   width: 100%;
   height: 100%;
 }
+
+@media (max-width: 1200) {
+}
+
+@media (max-width: 768px) {
+  .company-fig {
+    height: 4rem;
+    border-radius: 1rem;
+  }
+
+  .company-fig-11 {
+    grid-column: span 1 !important;
+    grid-row: span 1 !important;
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+
+@media (max-width: 480px) {
+  .company-fig {
+    height: 3.5rem;
+  }
+}
