--- a/src/components/Flow.css
+++ b/src/components/Flow.css
@@ -76,3 +76,68 @@
   display: flex;
   align-items: center;
 }
+
+@media (max-width: 1024px) {
+  .flow {
+    max-width: 90%;
+    gap: 3rem;
+  }
+
+  .flow-fig img {
+    height: 20rem;
+    width: 30rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .flow {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .flow-description,
+  .flow-fig {
+    width: 100%;
+  }
+
+  .flow-fig img {
+    height: auto;
+    width: 90%;
+  }
+
+  .flow-description h3 {
+    font-size: 1.8rem;
+    justify-content: center;
+  }
+
+  .flow-description p {
+    font-size: 1.3rem;
+    padding: 1rem 0;
+  }
+
+  .flow-description ul li {
+    font-size: 1.2rem;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 480px) {
+  .flow-description h3 {
+    font-size: 1.6rem;
+  }
+
+  .flow-description p {
+    font-size: 1.2rem;
+  }
+
+  .flow-description ul li {
+    font-size: 1rem;
+    gap: 0.5rem;
+  }
+
+  .flow-fig img {
+    width: 100%;
+    height: auto;
+  }
+}
