--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
   background-color: #e5cccc;
   color: #004644;
   height: 100vh;
+  width: 100%;
 }
 
 @media (prefers-color-scheme: light) {
