--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -70,6 +70,20 @@ li a:hover {
   color: var(--orange-color);
 }
 
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: var(--primary-color);
+  transition: all 0.3s ease;
+}
+
 @media (max-width: 768px) {
   .hamburger {
     display: flex;
