--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -37,7 +37,9 @@
 
 @media (max-width: 768px) {
   .card {
-    width: 80%;
+    width: 60%;
+    height: auto;
+    padding: 4rem 2rem;
   }
 
   .card h3 {
@@ -51,7 +53,7 @@
 
 @media (max-width: 480px) {
   .card {
-    width: 100%;
+    width: 80%;
   }
 
   .icon {
