--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -57,9 +57,9 @@ form .btn {
 /* Responsive Styles */
 @media (max-width: 768px) {
   .contact-people {
-    flex-direction: column;
+    flex-direction: row;
     gap: 2rem;
-    width: 100%;
+    width: 90%;
   }
 
   form input,
@@ -69,7 +69,7 @@ form .btn {
   }
 
   form .btn {
-    width: 100%;
+    width: 50%;
     transform: translateX(0);
     align-self: center;
   }
