--- a/src/sections/Customersection.css
+++ b/src/sections/Customersection.css
@@ -45,7 +45,7 @@
 
 @media (max-width: 768px) {
   .grid-container {
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(4, minmax(100px, 1fr));
     padding: 1.5rem;
     row-gap: 1.5rem;
   }
