--- a/src/sections/Footersection.css
+++ b/src/sections/Footersection.css
@@ -119,13 +119,13 @@
   gap: 5px;
 }
 
-.footer-follow-us ul li span {
+.footer-follow-us-icon {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.footer-follow-us ul li span ion-icon {
+.footer-icon {
   font-size: 2rem;
 }
 
@@ -199,6 +199,13 @@
 }
 
 @media (max-width: 480px) {
+  .footer-contant {
+    align-items: self-start;
+    justify-content: center;
+  }
+  .footer-description {
+    padding: 3rem 0;
+  }
   .footer-description figure img {
     height: 12rem;
     width: 12rem;
@@ -207,6 +214,7 @@
   .footer-building-bharat h2,
   .footer-program h2,
   .footer-follow-us h2 {
+    text-align: start;
     font-size: 1.5rem;
   }
 
@@ -215,6 +223,13 @@
   .footer-follow-us li a {
     font-size: 1.2rem;
     padding: 0.3rem 0;
+  }
+
+  .footer-building-bharat,
+  .footer-program,
+  .footer-follow-us {
+    flex-basis: 25%;
+    text-align: start;
   }
 
   .footer-des-contant {
