--- a/src/sections/Testimonial.css
+++ b/src/sections/Testimonial.css
@@ -29,7 +29,7 @@
 
 @media (max-width: 1024px) {
   .testimonial-card {
-    height: 50vh;
+    height: 80%;
   }
 
   .testimonial {
@@ -55,12 +55,15 @@
 }
 
 @media (max-width: 768px) {
+  .testimonial-card {
+    height: auto;
+  }
+  .testimonial {
+    display: flex;
+    flex-direction: column;
+  }
   .testimonial-section h2 {
     font-size: 2.2rem;
-  }
-
-  .testimonial {
-    gap: 1rem;
   }
 }
 
