final responsive desing

--- a/src/components/TestimonialCard.css
+++ b/src/components/TestimonialCard.css
@@ -6,7 +6,7 @@
   border-radius: 2rem;
   display: flex;
   align-items: center;
-  /* animation: slide 7s ease infinite; */
+  animation: slide 7s ease infinite;
   transform: translateX(5%);
   backface-visibility: hidden;
   animation-fill-mode: both;
